HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestAttributeWrongTarget/Expected.uv
//! Expected diagnostic metadata for the TestAttributeWrongTarget rejected-source specimen.

expectedDiagnostic("E-MOD-2452", "diagnostics.TestAttributes")
expectedDiagnostic("E-MOD-2452", "req.TestAttributeProcedureTarget")
